yaml/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: auth
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-ingress
  namespace: flag
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /flags
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 8002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-ingress
  namespace: targeting
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /rules
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-ingress
  namespace: evaluation
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /evaluate
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-ingress
  namespace: analytics
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 8005
